frontend: unset scrollbar css on logout, fix checkbox border when focused, fix profile image pointer when no hyperlink is applied, fix birthday on profile page

--- a/components/checkbox/checkbox.module.scss
+++ b/components/checkbox/checkbox.module.scss
@@ -47,6 +47,11 @@
 
         &:focus {
             border: 1px solid variables.$text-color-primary;
+
+            &::after {
+                left: 0.25rem;
+                top: 0.45rem;
+            }
         }
 
         &[disabled] {
